# piano

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/pianoShaders/: vertexShader.glsl
app/src/main/java/com/kalasoft/digibandpiano/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  audiomanager.cpp  firebase.cpp  glSetup.cpp  inputoutput.cpp  piano.cpp  piano.h  text.cpp  ui.cpp
gradle/wrapper/: gradle-wrapper.properties
